[gd_scene load_steps=14 format=3 uid="uid://be6kt1a1xs8aw"]

[ext_resource type="Script" uid="uid://ca65ujx0rkw2h" path="res://Scripts/Level6.gd" id="1_hqngw"]
[ext_resource type="PackedScene" uid="uid://b0yq4g60puvik" path="res://Scenes/car.tscn" id="2_eguui"]
[ext_resource type="PackedScene" uid="uid://dvq7lryf0brtk" path="res://Scenes/Player.tscn" id="2_enqk4"]
[ext_resource type="Texture2D" uid="uid://x6xsgvdg0e0j" path="res://Assets/Homes.png" id="2_ys3ak"]
[ext_resource type="Texture2D" uid="uid://btlevnv2j2qmh" path="res://Assets/Sidewalk.png" id="3_achdq"]
[ext_resource type="AudioStream" uid="uid://dldyd0q0epqh8" path="res://Assets/SFX/Entrance Chime.wav" id="5_achdq"]
[ext_resource type="Texture2D" uid="uid://7mturgigr2qn" path="res://Assets/Tear.png" id="5_tw4yl"]
[ext_resource type="AudioStream" uid="uid://cwie23idkllb8" path="res://Assets/SFX/Announcement 2.wav" id="6_0vxl1"]
[ext_resource type="AudioStream" uid="uid://ceja0su224dl8" path="res://Assets/Music/Jazzy Shop.wav" id="6_tw4yl"]
[ext_resource type="PackedScene" uid="uid://bts6hh3gtf3xr" path="res://Scenes/BGkid1.tscn" id="10_0vxl1"]
[ext_resource type="PackedScene" uid="uid://b0jfxoxef7ych" path="res://Scenes/BGkid2.tscn" id="11_ypqhe"]
[ext_resource type="Texture2D" uid="uid://v4gkbf0uc0u6" path="res://Assets/NPC Watching.png" id="12_tw4yl"]
[ext_resource type="PackedScene" uid="uid://igujjxkph4n3" path="res://Scenes/traffic.tscn" id="12_ypqhe"]

[node name="Level6" type="Node2D"]
script = ExtResource("1_hqngw")

[node name="Background" type="Node2D" parent="."]

[node name="Sky" type="ColorRect" parent="Background"]
z_index = -12
offset_right = 1152.0
offset_bottom = 210.0
color = Color(0.423323, 0.612006, 0.796667, 1)

[node name="Road" type="ColorRect" parent="Background"]
z_index = -12
offset_top = 327.0
offset_right = 1152.0
offset_bottom = 539.0
color = Color(0.435192, 0.435192, 0.435192, 1)

[node name="Stripe" type="ColorRect" parent="Background"]
z_index = -12
offset_left = 998.0
offset_top = 412.0
offset_right = 1118.0
offset_bottom = 452.0
color = Color(0.756974, 0.763056, 0, 1)

[node name="Stripe2" type="ColorRect" parent="Background"]
z_index = -12
offset_left = 787.0
offset_top = 412.0
offset_right = 907.0
offset_bottom = 452.0
color = Color(0.756974, 0.763056, 0, 1)

[node name="Stripe3" type="ColorRect" parent="Background"]
z_index = -12
offset_left = 565.0
offset_top = 412.0
offset_right = 685.0
offset_bottom = 452.0
color = Color(0.756974, 0.763056, 0, 1)

[node name="Stripe4" type="ColorRect" parent="Background"]
z_index = -12
offset_left = 344.0
offset_top = 412.0
offset_right = 464.0
offset_bottom = 452.0
color = Color(0.756974, 0.763056, 0, 1)

[node name="Stripe5" type="ColorRect" parent="Background"]
z_index = -12
offset_left = 127.0
offset_top = 412.0
offset_right = 247.0
offset_bottom = 452.0
color = Color(0.756974, 0.763056, 0, 1)

[node name="Stripe6" type="ColorRect" parent="Background"]
z_index = -12
offset_left = -81.0
offset_top = 412.0
offset_right = 39.0
offset_bottom = 452.0
color = Color(0.756974, 0.763056, 0, 1)

[node name="Houses" type="TextureRect" parent="Background"]
z_index = -5
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_ys3ak")

[node name="Sidewalk Far" type="TextureRect" parent="Background"]
z_index = -4
offset_top = 256.0
offset_right = 1152.0
offset_bottom = 320.0
scale = Vector2(1, 1.1)
texture = ExtResource("3_achdq")

[node name="Sidewalk Near" type="TextureRect" parent="Background"]
offset_left = -850.0
offset_top = 540.0
offset_right = 302.0
offset_bottom = 604.0
scale = Vector2(1.8, 2.4)
texture = ExtResource("3_achdq")

[node name="BackgroundObjects" type="Node2D" parent="."]
position = Vector2(0, 20)

[node name="WAVR" parent="." instance=ExtResource("2_enqk4")]

[node name="Tears" type="Node2D" parent="."]
z_index = 71
position = Vector2(171, 326)

[node name="Tear1" type="TextureRect" parent="Tears"]
visible = false
offset_left = 8.0
offset_top = 5.0
offset_right = 48.0
offset_bottom = 45.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_tw4yl")

[node name="Tear2" type="TextureRect" parent="Tears"]
visible = false
offset_left = 14.0
offset_top = 13.0
offset_right = 54.0
offset_bottom = 53.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_tw4yl")

[node name="Tear3" type="TextureRect" parent="Tears"]
visible = false
offset_left = 4.0
offset_top = 19.0
offset_right = 44.0
offset_bottom = 59.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_tw4yl")

[node name="Tear4" type="TextureRect" parent="Tears"]
visible = false
offset_left = 13.0
offset_top = 27.0
offset_right = 53.0
offset_bottom = 67.0
scale = Vector2(0.25, 0.25)
texture = ExtResource("5_tw4yl")

[node name="NPC Slots" type="Node2D" parent="."]
visible = false

[node name="Spawn" type="Node2D" parent="NPC Slots"]
position = Vector2(1152, 240)

[node name="Wait 1" type="Node2D" parent="NPC Slots"]
position = Vector2(827, 223)

[node name="Wait 2" type="Node2D" parent="NPC Slots"]
position = Vector2(771, 334)

[node name="Wait 3" type="Node2D" parent="NPC Slots"]
position = Vector2(915, 256)

[node name="Wait 4" type="Node2D" parent="NPC Slots"]
position = Vector2(854, 374)

[node name="Exit" type="Node2D" parent="NPC Slots"]
position = Vector2(-202, 242)

[node name="BGshopperWait" type="Node2D" parent="NPC Slots"]
position = Vector2(410, 72)

[node name="BGshopperRightEnd" type="Node2D" parent="NPC Slots"]
position = Vector2(641, 72)

[node name="BGshopperLeftEnd" type="Node2D" parent="NPC Slots"]
position = Vector2(201, 70)

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_tw4yl")
autoplay = true

[node name="SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_achdq")
volume_db = -20.0

[node name="SFX2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0vxl1")
volume_db = 10.0

[node name="Car" parent="." instance=ExtResource("2_eguui")]

[node name="Kid1" parent="Car" instance=ExtResource("10_0vxl1")]
position = Vector2(121.111, 50.5556)
scale = Vector2(-0.3, 0.3)

[node name="Kid2" parent="Car" instance=ExtResource("11_ypqhe")]
position = Vector2(161.667, 51.1111)
scale = Vector2(-0.25, 0.25)

[node name="Emote1" type="TextureRect" parent="Car"]
z_index = 5
offset_left = 91.1111
offset_top = 1.66667
offset_right = 155.111
offset_bottom = 65.6667
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_tw4yl")
stretch_mode = 2

[node name="Emote2" type="TextureRect" parent="Car"]
z_index = 5
offset_left = 135.0
offset_top = 6.66667
offset_right = 199.0
offset_bottom = 70.6667
scale = Vector2(0.5, 0.5)
texture = ExtResource("12_tw4yl")
stretch_mode = 2

[node name="Traffic" parent="." instance=ExtResource("12_ypqhe")]
